--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "styled-components": "^5.3.10",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
