--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "concurrently": "^8.0.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "react-router-dom": "^6.11.1",
     "styled-components": "^5.3.10"
   },
